--- a/_includes/timeline/ph4-trans.html
+++ b/_includes/timeline/ph4-trans.html
@@ -73,8 +73,8 @@
         <p>All of these skyhooks are made of CNT cable. The figures shown are for the configuration attained by the end of this Phase. All of them will be operating long before that, but with less capacity. As more cable is woven into the tethers, capacity increaases. </p>
         <details>
           <summary>Table Details</summary>
-          <p>In the rows that show tether mass, this is the mass of just the CNT cable. Those numbers show the mass first in kilotons, and then in the brackets, as what multiple it is of the payload mass. Really the payload mass should be multiplied by 1.05 to account for the mass of the climber, the foot platform, and all the infrastructure on the tether for maintenance and power transmission. Also, some cable masses should be multiplied by 1.05 to account for the center of gravity not being at the anchor mass, but a little above or below it. These things aren't done for the sake of simplicity.</p>
-          <p>These figures use a safety factor of 2. That factor accounts for what a tether needs to operate safely even despite wear and tear, manufacturing defects, and damage due to any micrometeoroid strikes. Safety factor of 2 means the taper ratio used is the square of what it would be if it was just barely enough to bear the loads on it. In that case, even if the cable's tensile strength was reduced by half, it would still be just strong enough to bear the weight on it. All skyhooks are made of an open weave of cables known as a <a href="http://www.tethers.com/Hoytether.html"> 'Hoytether'</a> weave, after Robert Hoyt of Tethers Unlimited. That design makes it easy for maintenance carts to weave in new cables when they detect a weakness on a cable. This may mean that a lower safety factor would be just fine. The mass of a tether changes drastically with a change in safety factor, so that would be a big help. Thus bear in mind that as in all things here, this number is estimated on the conservative side. </p>
+          <p>In the rows that show tether mass, this is the mass of just the CNT cable. Those numbers show the mass first in metric kilotons, and then in the brackets, as what multiple it is of the payload mass. Really the payload mass should be multiplied by 1.05 to account for the mass of the climber, the foot platform, and all the infrastructure on the tether for maintenance and power transmission. It also doesn't count the mass of the shaft that joins the two tethers together, around which the anchor mass is built up. That probably adds another 1% or so to the total cable mass. These things aren't done for the sake of simplicity. The grand total of both skyhooks also includes the mass of the foot station on the launch skyhook. As that mass directly bears on the mass of the cables and the strain on them, it is included there. Anchor mass uninvolved with bearing the weight on the cables has little relevance to the overall structure, other than it affects the center of gravity of the whole thing. It goes up and down over time, mostly up, and adds stability in general as it grows. </p>
+          <p>Tether figures use a safety factor of 2. That factor accounts for what a tether needs to operate safely even despite wear and tear, manufacturing defects, and damage due to any micrometeoroid strikes. Safety factor of 2 means the taper ratio used is the square of what it would be if it was just barely enough to bear the loads on it. In that case, even if the cable's tensile strength was reduced by half, it would still be just strong enough to bear the weight on it. All skyhooks are made of an open weave of cables known as a <a href="http://www.tethers.com/Hoytether.html"> 'Hoytether'</a> weave, after Robert Hoyt of Tethers Unlimited. That design makes it easy for maintenance carts to weave in new cables when they detect a weakness on a cable. This may mean that a lower safety factor would be just fine. The mass of a tether changes drastically with a change in safety factor, so that would be a big help. Thus bear in mind that as in all things here, this number is estimated on the conservative side. </p>
         </details>
 
         <table id="SINtable">
@@ -106,7 +106,7 @@
             <td>Anchor, km</td>
             <td>10000</td>
             <td>7000</td>
-            <td>6500</td>
+            <td>7000</td>
             <td>7000</td>
             <td>5980<sup class="note tooltip" data-tooltip-content="#phobosAnchor">[?]</sup></td>
             <td>4900</td>
@@ -230,7 +230,7 @@
             <td>Anchor, km</td>
             <td>1714</td>
             <td>1000</td>
-            <td>1000</td>
+            <td>929</td>
             <td>1000</td>
             <td>854</td>
             <td>700</td>
@@ -240,7 +240,7 @@
             <td>Tip, km</td>
             <td>10000</td>
             <td>6500</td>
-            <td>7000</td>
+            <td>6500</td>
             <td>15000</td>
             <td>9000</td>
             <td>11000</td>
@@ -253,9 +253,9 @@
             <td style="text-align: right">Mass, kt</td>
             <td>47 (0.47)</td> <!--mercury-->
             <td>30 (0.25)</td><!--venus-->
-            <td>108(0.27)</td><!--earth-->
+            <td>97 (0.23)</td><!--earth-->
             <td>11(0.11)</td><!--moon-->
-            <td>39 (0.13)</td><!--mars-->
+            <td>29 (0.13)</td><!--mars-->
             <td>3.9 (0.04)</td><!--callisto-->
             <td>5.2 (0.05)</td><!--titan-->
           </tr>
@@ -263,20 +263,20 @@
             <td style="text-align: right">Foot Station Mass,<sup class="note tooltip" data-tooltip-content="#footStation">[?]</sup>  kt</td>
             <td>90</td><!--mercury-->
             <td>110</td><!--venus-->
-            <td></td><!--earth-->
-            <td></td><!--moon-->
-            <td></td><!--mars-->
-            <td></td><!--callisto-->
-            <td></td><!--titan-->
+            <td>400</td><!--earth-->
+            <td>80</td><!--moon-->
+            <td>200</td><!--mars-->
+            <td>90</td><!--callisto-->
+            <td>90</td><!--titan-->
           <tr>
             <td style="text-align: right">Payload, kt</td>
             <td>10</td><!--mercury-->
             <td>10</td><!--venus-->
             <td>20</td><!--earth-->
-            <td>100</td><!--moon-->
-            <td>300</td><!--mars-->
-            <td>100</td><!--callisto-->
-            <td>100</td><!--titan-->
+            <td>20</td><!--moon-->
+            <td>20</td><!--mars-->
+            <td>10</td><!--callisto-->
+            <td>10</td><!--titan-->
           </tr>
           <tr>
             <td style="text-align: center"><i>Upper Tether</i></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td>
@@ -285,17 +285,17 @@
             <td style="text-align: right">Mass, kt</td>
             <td>551<sup class="note tooltip" data-tooltip-content="#payloadDemand">[?]</sup>(5.51)</td><!--mercury-->
             <td>522 (17.4)</td><!--venus-->
-            <td>3493 (29.7)</td><!--earth-->
+            <td>2190 (21.9)</td><!--earth-->
             <td>606 (20.2)</td><!--moon-->
-            <td>2000 (20.0)</td><!--mars-->
+            <td>1200 (20.0)</td><!--mars-->
             <td>184 (6.13)</td><!--callisto-->
-            <td>89.1(2.97)</td><!--titan-->
+            <td>297(2.97)</td><!--titan-->
           </tr>
           <tr>
             <td style="text-align: right">Payload, kt</td>
             <td>100</td><!--mercury-->
             <td>100</td><!--venus-->
-            <td>30</td><!--earth-->
+            <td>100</td><!--earth-->
             <td>30</td><!--moon-->
             <td>60</td><!--mars-->
             <td>30</td><!--callisto-->
@@ -305,7 +305,7 @@
             <td style="text-align: right">V(inf), m/s</td>
             <td>6635<sup class="note tooltip" data-tooltip-content="#Merc-LS-Vinf">[?]</sup></td>
             <td>9705<sup class="note tooltip" data-tooltip-content="#Venus-LS-Vinf">[?]</sup></td>
-            <td>10878<sup class="note tooltip" data-tooltip-content="#Earth-LS-Vinf">[?]</sup></td>
+            <td>10146<sup class="note tooltip" data-tooltip-content="#Earth-LS-Vinf">[?]</sup></td>
             <td>8150<sup class="note tooltip" data-tooltip-content="#Moon-LS-Vinf">[?]</sup></td>
             <td>8895<sup class="note tooltip" data-tooltip-content="#Mars-LS-Vinf">[?]</sup></td>
             <td>6469<sup class="note tooltip" data-tooltip-content="#Cal-LS-Vinf">[?]</sup></td>
@@ -313,13 +313,13 @@
           </tr>
           <tr>
             <td>Total Mass, kt</td>
-            <td>626</td><!--mercury-->
-            <td>572</td><!--venus-->
-            <td>3601</td><!--earth-->
-            <td>617</td><!--moon-->
-            <td>2039</td><!--mars-->
-            <td>188</td><!--callisto-->
-            <td>94.3</td><!--titan-->
+            <td>688</td><!--mercury-->
+            <td>662</td><!--venus-->
+            <td>2687</td><!--earth-->
+            <td>697</td><!--moon-->
+            <td>1429</td><!--mars-->
+            <td>278</td><!--callisto-->
+            <td>392</td><!--titan-->
           </tr>
         </table>
         <br><br>
@@ -360,7 +360,8 @@
       </div>
       <div class="tooltip_templates">
         <span id="footStation">
-          To place the center of gravity of the launch skyhooks where it needs to be - at the anchor station - the most mass efficient method is to add mass at the foot. If this isn't done, the much greater mass of the upper tether puts the center of gravity inside that tether. A very heavy anchor station goes a long way to fixing this issue, but it isn't enough, and at any rate a solution is needed while that anchor mass be being accumulated. Making a cable capable of sustaining the heavy mass of a large foot station is cheap, it takes only a fraction of a ton for each ton of payload. And then a great facility can be created at the foot, that takes advantage of the proximity to the surface for a great view and reduced radiation shielding needs.
+          To place the center of gravity of the launch skyhooks where it needs to be - at the anchor station - the most mass efficient method is to add mass at the foot. If this isn't done, the much greater mass of the upper tether puts the center of gravity inside that tether. A very heavy anchor station goes a long way to fixing this issue, but it isn't enough, and at any rate a solution is needed while that anchor mass is being accumulated. Making a cable capable of sustaining the heavy mass of a large foot station is cheap, it takes only a fraction of a ton for each ton of payload. And then a great facility can be created at the foot, that takes advantage of the proximity to the surface for a great view and reduced radiation shielding needs.<br><br>
+          The figures in this row show a rough estimate of how massive the foot station would need to be to place the center of gravity between the upper and lower tethers. The analysis needed to properly estimate this is far beyond my math abilities and will need to wait for a time when someone else can give the question the attention it needs. A precise solution for this is impossible due to the nature of the calculation. Experimentation with an actual system will be necessary to derive a functional formula that gives a really good approximate solution (but not an exact one).
         </span>
       </div>
       <div class="tooltip_templates">
@@ -410,7 +411,7 @@
       </div>
       <div class="tooltip_templates">
         <span id="Earth-LS-Vinf">
-          Earth is of course the hub of everything, and Anshar's sister skyhook fits that role. It throws things so hard, you can launch for Venus, Mars, or Mercury any time and have a short trip, get to Jupiter in a hurry too, and comfortably reach Saturn.
+          Earth is of course the hub of everything, and Anshar's sister skyhook fits that role. It throws things so hard, you can launch for Venus, Mars, or Mercury anytime and have a short trip, get to Jupiter anytime and shave some months off transit , and just reach Saturn.
         </span>
       </div>
       <div class="tooltip_templates">
@@ -443,18 +444,18 @@
     </details>
     <details>
       <summary><h5>Anshar Skyhook</h5></summary>
-      <p>Anshar is the first skyhook built out of CNT cable. That cable was spun in Gibraltar's manufacturing sphere using carbon extracted from carbonaceous asteroids. Soon after the skyhook opens, another CNT facility is constructed on its anchor mass. That facility then provides the cable for expanding Anshar, and for the rest of the skyhook constellation around Earth that springs up over the coming years.</p>
-      <p>The initial anchor mass is a metal asteroid massing 300 kt, and then carbonaceous asteroids are tacked onto that. Within 2 years the anchor masses over 2 megatons. </p>
+      <p>Anshar is the surface skyhook for Earth. It is the first skyhook built out of CNT cable. That cable was spun in Gibraltar's manufacturing sphere using carbon extracted from carbonaceous asteroids. Soon after the skyhook opens, another CNT facility is constructed on its anchor mass. That facility then provides the cable for expanding Anshar, and for the rest of the skyhook constellation around Earth that springs up over the coming years.</p>
+      <p>The initial anchor mass is a metal asteroid massing 300 kt, and then carbonaceous asteroids are tacked onto that. Within 2 years the anchor masses over 2 megatons. By the end of this phase, both it and it's sister skyhook have anchors massing over 20 megatons. </p>
       <p>An impressive complement of VASIMR and Neumann drives are attached to its tip platform and its anchor. In addition to solar panels, there are nuclear reactors providing electricity for the drives. Those reactors can also power nuclear thermal LANTR engines in an emergency for quick orbital corrections or avoidance maneuvers.</p>
-      <p>As the Van Allen belts have been drained, they are no issue for Anshar.</p>
-      <p>Further aspects of Anshar are discussed under the Anshar Station section</p>
+      <p>As the Van Allen belts have been drained, they are no issue for Anshar. It and its sister are tilted 25&deg; to the equator to put them on the plane of the ecliptic. </p>
+      <p>Further aspects of Anshar are discussed under the Anshar Station section.</p>
     </details>
     <details>
       <summary><h5>Earth Skyhook Constellation</h5></summary>
-        <p>Construction on the sister skyhook of Anshar, which is the launch skyhook in the table above, starts  right after Anshar is complete. Its upper cable masses 3.5 megatons all by itself, far bigger than any other cable. To help counterbalance it, the foot station is sized at a full megaton on its own. The
-
-           Then 6 skyhooks with orbits inclined 55&deg; to the equator are built, staggered 90&deg; apart. They have orbital periods that match Anshar. They too have all the infrastructure of the Anshar pair, but at a small fraction of their scale. They can only bear spacecraft massing 100 tons. </p>
-        <p>These skyhooks take over most of the Earth's long-distance telecoms services, and also provide a large fraction of all internet service. They are bases for servicing and launching of satellites, taking over those duties from the space stations. Small Hoppers stationed on them do orbital debris cleanup duty. They are observation platforms with a broad suite of instruments - telescopes across all wavelengths, radar, lidar, monitoring of the magnetosphere and radiation around Earth, gravimetry.</p>
+        <p>Construction on the sister skyhook of Anshar, which is the launch skyhook in the table above, starts  right after Anshar is complete. It is named after another ancient sky god, Hepit. Its upper cable masses 2.2 megatons all by itself, far bigger than any other cable. To seat the center of gravity of the skyhook at the correct point, a foot station is built on it that masses 400 kilotons.</p>
+        <p>Then 10 mini-skyhooks are built to complete an observation and telecoms infrastructure for Earth. 4 fill in the rest of the plane Anshar is in, 72&deg; apart on it. The other 5 are in a plane that complements that, with an ascending node exactly on the other side of the planet. They have orbital periods that match Anshar, circling the Earth every 4 hours and 15 minutes. They can only bear spacecraft massing 200 tons, and their upper tethers are only 1000 km long.  </p>
+        <p>These skyhooks take over a large fraction of Earth's internet and telecoms service. The skyhooks are bases for servicing and launching of satellites, taking over those duties from the free-flying space stations, as access to them is cheaper and easier. Small Hoppers stationed on them do orbital debris cleanup duty. They are observation platforms with a broad suite of instruments - telescopes across all wavelengths, radar, lidar, monitoring of the magnetosphere and radiation around Earth, gravimetry.</p>
+        <p>Together, this set of skyhooks eliminate the necessity of most other satellites in Earth orbit. That allows the vast majority of them to be cleared away to ensure the skyhooks need not worry about colliding with them. Deals are made with operators of satellites being cleared to move their operations onto the skyhooks. Debris in orbit has been mostly handled by the time these events occur and satellites have been slotted into orbits posing no risk to the planned skyhooks for the previous 15 years or so. </p>
     </details>
     <details>
       <summary><h5>Horizontal Takeoff and Landing, and Rejigging the Lunar Skyhooks</h5></summary>
@@ -479,8 +480,9 @@
     </details>
     <details>
       <summary><h5>Laser Propulsion</h5></summary>
-      <p>A laser system is built at Inukshuk that can be used with a special version of the solar sails (that can handle extremely intense light) to push small probes to relativistic speeds (speeds fast enough to be regarded as a fraction of the speed of light). A series of trials is done with it. Work is done on how to use the extensive infrastructure now spread across the solar system to deploy tools to keep lasers tightly focused on the sails longer. Tests using lenses orbiting several AU from Earth are done, to refocus the beam once the probe passes by. After a while, a second, and then a third laser is built and placed in orbits further from the sun. Schooners reposition the lasers between trials to align them such that they can fire on a probe once it passes their position.
+      <p>A laser system is built at Inukshuk that can be used with a special version of the solar sails (that can handle extremely intense light) to push small probes to relativistic speeds (speeds fast enough to be regarded as a fraction of the speed of light). A series of trials is done with it. Work is done on how to use the extensive infrastructure now spread across the solar system to deploy tools to keep lasers tightly focused on the sails longer. Tests using lenses orbiting several AU from Earth are done, to refocus the beam once the probe passes by. After a while, a second, and then a third laser is built and placed in orbits further from the sun. Schooners reposition the lenses and lasers between trials to align them such that they can focus or fire on a probe once it passes their position.
       </p>
+      <p>This is done in preparation for interstellar missions. A capacity to accelerate probes massing a kilogram to 15% of the speed of light is created. Though the probes must be small, many can be sent. At they end of this stage, many such probes are launched to our closest neighboring stars.</p>
     </details>
   </details>
   </article>
